# laberbox

./: Cargo.toml  README.md
.github/workflows/: rust.yml
integrations/zola/templates/shortcodes/: comments.html
src/: main.rs  server.rs
tests/: server_integration.rs  zola_render.rs
tests/zola/: config.toml
tests/zola/content/: _index.md
tests/zola/content/with-comments/: comments.yaml  index.md
tests/zola/content/without-comments/: index.md
tests/zola/templates/: index.html  page.html
