[package]
name = "comment_server"
version = "0.2.0"
authors = ["Bytekeeper <bytekeeper@mailbox.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.10"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
anyhow = "1.0"
octocrab = "0.49"
env_logger = "0.11"
log = "0.4"
tower = { version = "0.5", features = ["limit", "buffer", "util"] }
